[package]
name = "learning_rust"
version = "0.1.0"
authors = ["Ken Butler <ken.butler@gtri.gatech.edu>", "Nathan Parrish <nathan.parrish@gtri.gatech.edu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
simple_logger = "1.11.0"